Cleanup (dead code; deprecated API; NIO migration; typos; formatting)
GitOrigin-RevId: 511c84d42a9e575ad54155e40450615f83c72fa3