@@ -9,7 +9,6 @@ import com.intellij.ide.plugins.marketplace.PluginSignatureChecker;
 import com.intellij.ide.plugins.marketplace.utils.MarketplaceUrls;
 import com.intellij.ide.startup.StartupActionScriptManager;
 import com.intellij.internal.statistic.DeviceIdManager;
-import com.intellij.openapi.application.Application;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
 import com.intellij.openapi.application.impl.ApplicationInfoImpl;
@@ -18,17 +17,15 @@ import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.ui.Messages;
 import com.intellij.openapi.util.BuildNumber;
-import com.intellij.openapi.util.NlsContexts;
+import com.intellij.openapi.util.NlsContexts.NotificationContent;
 import com.intellij.openapi.util.NlsSafe;
 import com.intellij.util.concurrency.ThreadingAssertions;
 import com.intellij.util.text.VersionComparatorUtil;
 import com.intellij.xml.util.XmlStringUtil;
-import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
-import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URI;
@@ -42,36 +39,36 @@ import java.util.function.Consumer;
 import static com.intellij.ide.plugins.BrokenPluginFileKt.isBrokenPlugin;
 
 public final class PluginDownloader {
-
   private static final Logger LOG = Logger.getInstance(PluginDownloader.class);
 
-  private final @NotNull PluginId myPluginId;
+  private final PluginId myPluginId;
   private final @Nullable String myPluginName;
   private final @Nullable String myProductCode;
-  private final Date myReleaseDate;
+  private final @Nullable Date myReleaseDate;
   private final int myReleaseVersion;
   private final boolean myLicenseOptional;
   private final String myDescription;
-  private final @NotNull List<? extends IdeaPluginDependency> myDependencies;
+  private final List<? extends IdeaPluginDependency> myDependencies;
 
-  private final @NotNull String myPluginUrl;
+  private final String myPluginUrl;
   private final BuildNumber myBuildNumber;
 
-  private final @NotNull Consumer<@NotNull @NlsContexts.NotificationContent String> myErrorsConsumer;
+  private final Consumer<@NotNull @NotificationContent String> myErrorsConsumer;
   private final @Nullable MarketplacePluginDownloadService myDownloadService;
 
   private @NlsSafe String myPluginVersion;
   private IdeaPluginDescriptor myDescriptor;
-  private File myFile;
+  private Path myFile;
   private Path myOldFile;
-
   private boolean myShownErrors;
 
-  private PluginDownloader(@NotNull IdeaPluginDescriptor descriptor,
-                           @NotNull String pluginUrl,
-                           @Nullable BuildNumber buildNumber,
-                           @NotNull Consumer<@NotNull @NlsContexts.NotificationContent String> errorsConsumer,
-                           @Nullable MarketplacePluginDownloadService service) {
+  private PluginDownloader(
+    IdeaPluginDescriptor descriptor,
+    String pluginUrl,
+    @Nullable BuildNumber buildNumber,
+    Consumer<@NotNull @NotificationContent String> errorsConsumer,
+    @Nullable MarketplacePluginDownloadService service
+  ) {
     myPluginId = descriptor.getPluginId();
     myPluginName = descriptor.getName();
     myProductCode = descriptor.getProductCode();
@@ -90,26 +87,16 @@ public final class PluginDownloader {
     myDownloadService = service;
   }
 
-  public @NotNull PluginDownloader withErrorsConsumer(@NotNull Consumer<@NotNull @NlsContexts.NotificationContent String> errorsConsumer) {
-    return new PluginDownloader(myDescriptor,
-                                myPluginUrl,
-                                myBuildNumber,
-                                errorsConsumer,
-                                myDownloadService);
+  public @NotNull PluginDownloader withErrorsConsumer(@NotNull Consumer<@NotNull @NotificationContent String> errorsConsumer) {
+    return new PluginDownloader(myDescriptor, myPluginUrl, myBuildNumber, errorsConsumer, myDownloadService);
   }
 
   public @NotNull PluginDownloader withDownloadService(@Nullable MarketplacePluginDownloadService downloadService) {
-    return new PluginDownloader(myDescriptor,
-                                myPluginUrl,
-                                myBuildNumber,
-                                myErrorsConsumer,
-                                downloadService);
+    return new PluginDownloader(myDescriptor, myPluginUrl, myBuildNumber, myErrorsConsumer, downloadService);
   }
 
-  /**
-   * @deprecated Use {@link #getId()}
-   */
-  @Deprecated
+  /** @deprecated Use {@link #getId()} */
+  @Deprecated(forRemoval = true)
   public @NotNull String getPluginId() {
     return myPluginId.getIdString();
   }
@@ -130,7 +117,7 @@ public final class PluginDownloader {
     return myProductCode;
   }
 
-  public Date getReleaseDate() {
+  public @Nullable Date getReleaseDate() {
     return myReleaseDate;
   }
 
@@ -140,9 +127,7 @@ public final class PluginDownloader {
 
   public boolean isFromMarketplace() {
     try {
-      URL pluginURL = new URL(myPluginUrl);
-      URL defaultPluginsHost = new URL(ApplicationInfoImpl.DEFAULT_PLUGINS_HOST);
-      return pluginURL.getHost().equals(defaultPluginsHost.getHost());
+      return new URL(myPluginUrl).getHost().equals(new URL(ApplicationInfoImpl.DEFAULT_PLUGINS_HOST).getHost());
     }
     catch (MalformedURLException ignored) {
       return false;
@@ -163,7 +148,7 @@ public final class PluginDownloader {
 
   public @NotNull Path getFilePath() throws IOException {
     if (myFile != null) {
-      return myFile.toPath();
+      return myFile;
     }
     else {
       throw new IOException("Plugin '" + getPluginName() + "' was not successfully downloaded");
@@ -179,23 +164,20 @@ public final class PluginDownloader {
     myShownErrors = false;
 
     if (myFile != null) {
-      IdeaPluginDescriptorImpl actualDescriptor = loadDescriptorFromArtifact();
+      var actualDescriptor = loadDescriptorFromArtifact();
       if (actualDescriptor == null) {
-        reportError(IdeBundle.message("error.descriptor.load.failed", myFile.getPath()));
+        reportError(IdeBundle.message("error.descriptor.load.failed", myFile));
         return false;
       }
-
       myDescriptor = actualDescriptor;
       return true;
     }
 
     IdeaPluginDescriptor descriptor = null;
-    if (!Boolean.getBoolean(StartupActionScriptManager.STARTUP_WIZARD_MODE) &&
-        PluginManagerCore.isPluginInstalled(myPluginId)) {
-      //store old plugins file
+
+    if (!Boolean.getBoolean(StartupActionScriptManager.STARTUP_WIZARD_MODE) && PluginManagerCore.isPluginInstalled(myPluginId)) {
       descriptor = PluginManagerCore.getPlugin(myPluginId);
       LOG.assertTrue(descriptor != null);
-
 
       if (myPluginVersion != null) {
         int result = compareVersionsSkipBrokenAndIncompatible(myPluginVersion, descriptor);
@@ -203,10 +185,11 @@ public final class PluginDownloader {
           LOG.info("Preparing to downgrade plugin '" + myPluginId + "' : " + myPluginVersion + " -> " + descriptor.getVersion());
         }
         else if (result <= 0) {
-          LOG.info("Plugin " + myPluginId + ": current version (max) " + myPluginVersion);
+          LOG.info("Preparing: plugin " + myPluginId + ": current version (max) " + myPluginVersion);
           return false;
         }
       }
+
       myOldFile = descriptor.isBundled() ? null : descriptor.getPluginPath();
     }
 
@@ -215,32 +198,30 @@ public final class PluginDownloader {
     }
     catch (IOException e) {
       LOG.info(e);
-
-      String message = e.getMessage();
+      var message = e.getMessage();
       reportError(message != null ? message : IdeBundle.message("unknown.error"));
       return false;
     }
 
-    boolean loaded = LoadingState.COMPONENTS_LOADED.isOccurred(); // plugins can be requested during initial IDE setup (e.g. in Rider initial setup wizard).
-    if (loaded &&
-        !PluginSignatureChecker.verifyIfRequired(myDescriptor, myFile, isFromMarketplace(), true)) {
+    var loaded = LoadingState.COMPONENTS_LOADED.isOccurred();  // plugins can be requested during initial IDE setup
+    if (loaded && !PluginSignatureChecker.verifyIfRequired(myDescriptor, myFile, isFromMarketplace(), true)) {
       myShownErrors = true;
       return false;
     }
 
-    IdeaPluginDescriptorImpl actualDescriptor = loadDescriptorFromArtifact();
+    var actualDescriptor = loadDescriptorFromArtifact();
     if (actualDescriptor == null) {
       reportError(IdeBundle.message("error.downloaded.descriptor.load.failed"));
       return false;
     }
 
-    if (loaded &&
-        InstalledPluginsState.getInstance().wasUpdated(actualDescriptor.getPluginId())) {
+    if (loaded && InstalledPluginsState.getInstance().wasUpdated(actualDescriptor.getPluginId())) {
       reportError(IdeBundle.message("error.pending.update", getPluginName()));
-      return false; //already updated
+      return false;
     }
 
     myPluginVersion = actualDescriptor.getVersion();
+
     if (descriptor != null) {
       int result = compareVersionsSkipBrokenAndIncompatible(myPluginVersion, descriptor);
       if (result < 0 && isDowngradeAllowed(descriptor)) {
@@ -249,19 +230,19 @@ public final class PluginDownloader {
       else if (result <= 0) {
         LOG.info("Plugin " + myPluginId + ": current version (max) " + myPluginVersion);
         reportError(IdeBundle.message("error.older.update", myPluginVersion, descriptor.getVersion()));
-        return false; //was not updated
+        return false;
       }
     }
 
     myDescriptor = actualDescriptor;
 
-    BuildNumber buildNumber = myBuildNumber != null ? myBuildNumber : PluginManagerCore.getBuildNumber();
-    PluginLoadingError incompatibleError = PluginManagerCore.checkBuildNumberCompatibility(actualDescriptor, buildNumber);
+    var buildNumber = myBuildNumber != null ? myBuildNumber : PluginManagerCore.getBuildNumber();
+    var incompatibleError = PluginManagerCore.checkBuildNumberCompatibility(actualDescriptor, buildNumber);
     if (incompatibleError != null) {
       LOG.info("Plugin " + myPluginId + " is incompatible with current installation " +
                "(since:" + actualDescriptor.getSinceBuild() + " until:" + actualDescriptor.getUntilBuild() + ")");
       reportError(IdeBundle.message("error.incompatible.update", XmlStringUtil.escapeString(incompatibleError.getDetailedMessage())));
-      return false; //host outdated plugins, no compatible plugin for new version
+      return false;
     }
 
     return true;
@@ -281,22 +262,76 @@ public final class PluginDownloader {
     }
   }
 
-  private void reportError(@NotNull @NlsContexts.NotificationContent String errorMessage) {
+  private void reportError(@NotificationContent String errorMessage) {
     LOG.info("PluginDownloader error: " + errorMessage);
     myShownErrors = true;
     myErrorsConsumer.accept(IdeBundle.message("error.plugin.was.not.installed", getPluginName(), errorMessage));
   }
 
-  public static void showErrorDialog(@NotNull @NlsContexts.NotificationContent String text) {
-    Application application = ApplicationManager.getApplication();
-    if (application == null || application.isDisposed()) {
-      return;
+  public void install() throws IOException {
+    PluginInstaller.installAfterRestartAndKeepIfNecessary(myDescriptor, getFilePath(), myOldFile);
+
+    if (LoadingState.COMPONENTS_LOADED.isOccurred()) {
+      var isInstalled = PluginManagerCore.isPluginInstalled(myDescriptor.getPluginId());
+      InstalledPluginsState.getInstance().onPluginInstall(myDescriptor, isInstalled, true);
+    }
+    else {
+      InstalledPluginsState.addPreInstalledPlugin(myDescriptor);
+    }
+  }
+
+  public boolean installDynamically(@Nullable JComponent ownerComponent) throws IOException {
+    assert myDescriptor instanceof IdeaPluginDescriptorImpl;
+    var descriptor = (IdeaPluginDescriptorImpl)myDescriptor;
+
+    var appliedWithoutRestart =
+      DynamicPlugins.allowLoadUnloadWithoutRestart(descriptor) &&
+      (myOldFile == null || unloadDescriptorById(descriptor.getPluginId())) &&
+      PluginInstaller.installAndLoadDynamicPlugin(getFilePath(), ownerComponent, descriptor);
+
+    if (!appliedWithoutRestart) {
+      install();
     }
 
-    application.invokeLater(() -> {
-      Messages.showErrorDialog(text,
-                               IdeBundle.message("title.plugin.installation"));
-    }, ModalityState.any());
+    return appliedWithoutRestart;
+  }
+
+  @NotNull Path tryDownloadPlugin(@Nullable ProgressIndicator indicator) throws IOException {
+    ThreadingAssertions.assertBackgroundThread();
+    if (indicator != null) {
+      indicator.checkCanceled();
+      indicator.setText2(IdeBundle.message("progress.downloading.plugin", getPluginName()));
+    }
+
+    LOG.info("downloading plugin " + myPluginName + "(" + myPluginId + ") version " + myPluginVersion + " from " + myPluginUrl);
+    var downloader = myDownloadService != null ? myDownloadService : new MarketplacePluginDownloadService();
+    return myOldFile != null ?
+           downloader.downloadPluginViaBlockMap(myPluginUrl, myOldFile, indicator) :
+           downloader.downloadPlugin(myPluginUrl, indicator);
+  }
+
+  public @NotNull PluginNode toPluginNode() {
+    var descriptor = getDescriptor();
+    if (descriptor instanceof PluginNode) {
+      return (PluginNode)descriptor;
+    }
+
+    var node = new PluginNode(getId());
+    node.setName(getPluginName());
+    node.setProductCode(getProductCode());
+    node.setReleaseDate(getReleaseDate());
+    node.setReleaseVersion(getReleaseVersion());
+    node.setLicenseOptional(isLicenseOptional());
+    node.setVersion(getPluginVersion());
+    node.setDownloadUrl(myPluginUrl);
+    node.setDependencies(myDependencies);
+    node.setDescription(myDescription);
+    return node;
+  }
+
+  // This is a hacky way to get around the fact that prepareToInstall does more than it should. FIXME
+  void setOldFile(@Nullable Path oldFile) {
+    myOldFile = oldFile;
   }
 
   public static String getMarketplaceDownloadsUUID() {
@@ -308,72 +343,35 @@ public final class PluginDownloader {
     }
   }
 
-  public static int compareVersionsSkipBrokenAndIncompatible(String newPluginVersion,
-                                                             @NotNull IdeaPluginDescriptor existingPlugin) {
+  public static void showErrorDialog(@NotNull @NotificationContent String text) {
+    var app = ApplicationManager.getApplication();
+    if (app != null && !app.isDisposed()) {
+      app.invokeLater(() -> Messages.showErrorDialog(text, IdeBundle.message("title.plugin.installation")), ModalityState.any());
+    }
+  }
+
+  public static int compareVersionsSkipBrokenAndIncompatible(String newPluginVersion, @NotNull IdeaPluginDescriptor existingPlugin) {
     return compareVersionsSkipBrokenAndIncompatible(newPluginVersion, existingPlugin, null);
   }
 
-  public static int compareVersionsSkipBrokenAndIncompatible(String newPluginVersion,
-                                                             @NotNull IdeaPluginDescriptor existingPlugin,
-                                                             @Nullable BuildNumber newBuildNumber) {
+  public static int compareVersionsSkipBrokenAndIncompatible(
+    String newPluginVersion,
+    @NotNull IdeaPluginDescriptor existingPlugin,
+    @Nullable BuildNumber newBuildNumber
+  ) {
     int state = VersionComparatorUtil.compare(newPluginVersion, existingPlugin.getVersion());
-    if (state < 0 &&
-        (isBrokenPlugin(existingPlugin) || PluginManagerCore.isIncompatible(existingPlugin, newBuildNumber))) {
+    if (state < 0 && (isBrokenPlugin(existingPlugin) || PluginManagerCore.isIncompatible(existingPlugin, newBuildNumber))) {
       state = 1;
     }
     return state;
   }
 
-  public void install() throws IOException {
-    PluginInstaller.installAfterRestartAndKeepIfNecessary(myDescriptor, getFilePath(), myOldFile);
-
-    if (LoadingState.COMPONENTS_LOADED.isOccurred()) {
-      InstalledPluginsState.getInstance().onPluginInstall(myDescriptor,
-                                                          PluginManagerCore.isPluginInstalled(myDescriptor.getPluginId()),
-                                                          true);
-    }
-    else {
-      InstalledPluginsState.addPreInstalledPlugin(myDescriptor);
-    }
+  public static @NotNull PluginDownloader createDownloader(@NotNull IdeaPluginDescriptor descriptor) throws IOException {
+    return createDownloader(descriptor, null, null);
   }
 
-  public boolean installDynamically(@Nullable JComponent ownerComponent) throws IOException {
-    assert myDescriptor instanceof IdeaPluginDescriptorImpl;
-    IdeaPluginDescriptorImpl descriptor = (IdeaPluginDescriptorImpl)myDescriptor;
-
-    // yes, if no installed plugin by id, it means that something goes wrong, so do not try to install and load
-    boolean appliedWithoutRestart = DynamicPlugins.allowLoadUnloadWithoutRestart(descriptor) &&
-                                    (myOldFile == null || unloadDescriptorById(myDescriptor.getPluginId())) &&
-                                    PluginInstaller.installAndLoadDynamicPlugin(getFilePath(), ownerComponent, descriptor);
-
-    if (!appliedWithoutRestart) {
-      install();
-    }
-
-    return appliedWithoutRestart;
-  }
-
-  // This is a hacky way to get around the fact that prepareToInstall does more than it should. FIXME
-  void setOldFile(@Nullable Path oldFile) {
-    myOldFile = oldFile;
-  }
-
-  @NotNull File tryDownloadPlugin(@Nullable ProgressIndicator indicator) throws IOException {
-    ThreadingAssertions.assertBackgroundThread();
-    if (indicator != null) {
-      indicator.checkCanceled();
-      indicator.setText2(IdeBundle.message("progress.downloading.plugin", getPluginName()));
-    }
-
-    LOG.info("downloading plugin " + myPluginName + "(" + myPluginId + ") version " + myPluginVersion + " from " + myPluginUrl);
-    MarketplacePluginDownloadService downloader = myDownloadService != null ? myDownloadService : new MarketplacePluginDownloadService();
-    return myOldFile != null ?
-           downloader.downloadPluginViaBlockMap(myPluginUrl, myOldFile, indicator) :
-           downloader.downloadPlugin(myPluginUrl, indicator);
-  }
-
-  private static boolean unloadDescriptorById(@NotNull PluginId pluginId) {
-    IdeaPluginDescriptorImpl descriptor = PluginManagerCore.findPlugin(pluginId);
+  private static boolean unloadDescriptorById(PluginId pluginId) {
+    var descriptor = PluginManagerCore.findPlugin(pluginId);
     return descriptor != null &&
            DynamicPlugins.allowLoadUnloadWithoutRestart(descriptor) &&
            DynamicPlugins.INSTANCE.unloadPlugin(descriptor,
@@ -383,71 +381,24 @@ public final class PluginDownloader {
                                                   .withWaitForClassloaderUnload(true));
   }
 
-  // creators-converters
-  public static @NotNull PluginDownloader createDownloader(@NotNull IdeaPluginDescriptor descriptor) throws IOException {
-    return createDownloader(descriptor, null, null);
+  public static @NotNull PluginDownloader createDownloader(
+    @NotNull IdeaPluginDescriptor descriptor,
+    @Nullable String host,
+    @Nullable BuildNumber buildNumber
+  ) throws IOException {
+    var currentVersion = PluginManagerCore.getPlugin(descriptor.getPluginId());
+    var url = descriptor instanceof PluginNode && host != null ?
+              toAbsoluteUrl(((PluginNode)descriptor).getDownloadUrl(), host) :
+              MarketplaceUrls.getPluginDownloadUrl(descriptor, getMarketplaceDownloadsUUID(), buildNumber, currentVersion);
+    return new PluginDownloader(descriptor, url, buildNumber, PluginDownloader::showErrorDialog, null);
   }
 
-  public static @NotNull PluginDownloader createDownloader(@NotNull IdeaPluginDescriptor descriptor,
-                                                           @Nullable String host,
-                                                           @Nullable BuildNumber buildNumber) throws IOException {
-    IdeaPluginDescriptor currentVersion = PluginManagerCore.getPlugin(descriptor.getPluginId());
-    String url = descriptor instanceof PluginNode && host != null ?
-                 toAbsoluteUrl(((PluginNode)descriptor).getDownloadUrl(), host) :
-                 MarketplaceUrls.getPluginDownloadUrl(descriptor, getMarketplaceDownloadsUUID(), buildNumber, currentVersion);
-
-    return new PluginDownloader(descriptor,
-                                url,
-                                buildNumber,
-                                PluginDownloader::showErrorDialog,
-                                null);
-  }
-
-  public @NotNull PluginNode toPluginNode() {
-    return toPluginNode(null);
-  }
-
-  public @NotNull PluginNode toPluginNode(@Nullable String host) {
-    IdeaPluginDescriptor descriptor = getDescriptor();
-    if (descriptor instanceof PluginNode) {
-      return (PluginNode)descriptor;
-    }
-
-    PluginNode node = new PluginNode(getId());
-    node.setName(getPluginName());
-    node.setProductCode(getProductCode());
-    node.setReleaseDate(getReleaseDate());
-    node.setReleaseVersion(getReleaseVersion());
-    node.setLicenseOptional(isLicenseOptional());
-    node.setVersion(getPluginVersion());
-    node.setRepositoryName(host);
-    node.setDownloadUrl(myPluginUrl);
-    node.setDependencies(myDependencies);
-    node.setDescription(myDescription);
-    return node;
-  }
-
-  private static @NotNull String toAbsoluteUrl(@NotNull String downloadUrl,
-                                               @NotNull String host) throws IOException {
+  private static String toAbsoluteUrl(String downloadUrl, String host) throws IOException {
     try {
-      return new URI(downloadUrl).isAbsolute() ?
-             downloadUrl :
-             new URL(new URL(host), downloadUrl).toExternalForm();
+      return new URI(downloadUrl).isAbsolute() ? downloadUrl : new URL(new URL(host), downloadUrl).toExternalForm();
     }
     catch (URISyntaxException e) {
       throw new IOException(e);
-    }
-  }
-
-  @ApiStatus.Internal
-  public static void runSynchronouslyInBackground(@NotNull Runnable runnable) {
-    try {
-      Thread thread = new Thread(runnable, "Plugin downloader");
-      thread.start();
-      thread.join();
-    }
-    catch (InterruptedException e) {
-      throw new RuntimeException(e);
     }
   }
 }
